[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://testworld.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Enemies/TestAdvEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/world/cursor.png" type="Texture" id=6]
[ext_resource path="res://scripts/Cursor.gd" type="Script" id=7]
[ext_resource path="res://sprites/world/outline.png" type="Texture" id=8]
[ext_resource path="res://front/UI.png" type="Texture" id=9]
[ext_resource path="res://fonts/BRLNSR.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://miscres/face.tres" type="Theme" id=11]
[ext_resource path="res://front/ProgressBarOver.png" type="Texture" id=12]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=13]
[ext_resource path="res://front/SkipTurnDisable.png" type="Texture" id=14]
[ext_resource path="res://front/SkipTurnPressed.png" type="Texture" id=15]
[ext_resource path="res://front/SkipTurnHover.png" type="Texture" id=16]
[ext_resource path="res://front/SkipTurnDefault.png" type="Texture" id=17]
[ext_resource path="res://scripts/CurrentPlayerArrow.gd" type="Script" id=18]
[ext_resource path="res://sprites/world/arrow.png" type="Texture" id=19]

[sub_resource type="Environment" id=1]
background_mode = 4
tonemap_mode = 1
dof_blur_far_distance = 0.01
glow_enabled = true
glow_hdr_threshold = 4.0

[sub_resource type="TileSet" id=2]
0/name = "outline.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="ButtonGroup" id=6]

[node name="main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 1696.0 ]
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera" parent="." instance=ExtResource( 4 )]

[node name="TileMap" parent="." instance=ExtResource( 2 )]
collision_layer = 3
occluder_light_mask = 3
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 0, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 0, 0, 65564, 1, 0, 65565, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 0, 0, 131096, 1, 0, 131097, 0, 0, 131098, 1, 0, 131099, 0, 0, 131100, 1, 0, 131101, 0, 0, 196608, 0, 0, 196609, 1, 0, 196610, 0, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 0, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 0, 0, 262165, 1, 0, 262166, 0, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 0, 0, 262171, 1, 0, 262172, 1, 0, 262173, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 0, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 0, 0, 327700, 0, 0, 327701, 1, 0, 327702, 1, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 1, 0, 327707, 0, 0, 327708, 1, 0, 327709, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 0, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 0, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 0, 0, 393244, 1, 0, 393245, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 0, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 0, 0, 458769, 0, 0, 458770, 1, 0, 458771, 1, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 1, 0, 458781, 0, 0, 524288, 0, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 0, 0, 524303, 1, 0, 524304, 1, 0, 524305, 0, 0, 524306, 1, 0, 524307, 1, 0, 524308, 0, 0, 524309, 1, 0, 524310, 0, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 0, 0, 524315, 1, 0, 524316, 1, 0, 524317, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 1, 0, 589827, 1, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 1, 0, 589837, 1, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 1, 0, 589843, 1, 0, 589844, 0, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 0, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 0, 0, 655360, 0, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 0, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 0, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 0, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 0, 0, 655381, 1, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 720896, 0, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 0, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 0, 0, 720912, 0, 0, 720913, 1, 0, 720914, 1, 0, 720915, 0, 0, 720916, 0, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 0, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 0, 0, 786432, 0, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 0, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 0, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 0, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 0, 0, 851968, 0, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 0, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 0, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 0, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 0, 0, 851989, 1, 0, 851990, 0, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 0, 0, 851995, 1, 0, 851996, 1, 0, 851997, 0, 0, 917504, 0, 0, 917505, 1, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 1, 0, 917522, 1, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 1, 0, 917533, 0, 0, 983040, 0, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0 )

[node name="Outline" type="TileMap" parent="."]
light_mask = 0
tile_set = SubResource( 2 )
collision_layer = 0
collision_mask = 0
occluder_light_mask = 0
format = 1

[node name="raycast" type="RayCast2D" parent="."]
exclude_parent = false

[node name="Players" type="Node2D" parent="."]

[node name="1" parent="Players" instance=ExtResource( 3 )]
position = Vector2( 96, 96 )

[node name="2" parent="Players" instance=ExtResource( 3 )]
position = Vector2( 1248, 160 )

[node name="3" parent="Players" instance=ExtResource( 3 )]
position = Vector2( 736, 480 )

[node name="Enemies" type="Node2D" parent="."]
light_mask = 0

[node name="Advanced Enemy" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 1056, 544 )

[node name="Advanced Enemy2" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 1248, 288 )

[node name="Advanced Enemy3" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 1376, 672 )

[node name="Cursor" type="Sprite" parent="."]
light_mask = 0
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
script = ExtResource( 7 )

[node name="CurrentPlayerArrow" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 96, 32 )
texture = ExtResource( 19 )
script = ExtResource( 18 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="UIBG" type="TextureRect" parent="HUD"]
light_mask = 0
margin_right = 40.0
margin_bottom = 1080.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBar" type="TextureProgress" parent="HUD"]
material = SubResource( 3 )
margin_left = 1636.0
margin_top = 36.0
margin_right = 1892.0
margin_bottom = 100.0
theme = ExtResource( 11 )
value = 100.0
texture_progress = ExtResource( 12 )

[node name="TimeText" type="RichTextLabel" parent="HUD"]
margin_left = 1644.0
margin_top = 36.0
margin_right = 1900.0
margin_bottom = 100.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "100 / 100"
text = "100 / 100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipTurnButton" type="TextureButton" parent="HUD"]
margin_left = 1504.0
margin_top = 864.0
margin_right = 1904.0
margin_bottom = 1064.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Idle" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1506.0
margin_top = 160.0
margin_right = 1596.0
margin_bottom = 200.0
hint_tooltip = "Clicking on a tile does not perform any action.  "
custom_fonts/font = SubResource( 5 )
toggle_mode = true
pressed = true
group = SubResource( 6 )
text = "IDLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walk" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1624.0
margin_top = 160.0
margin_right = 1714.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( -192, -64 )
hint_tooltip = "Click on a tile to walk.  Slower than running but more quiet."
custom_fonts/font = SubResource( 5 )
toggle_mode = true
group = SubResource( 6 )
text = "WALK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1714.0
margin_top = 160.0
margin_right = 1804.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( -192, -64 )
hint_tooltip = "Click on a tile to run.  Faster than walking but very loud."
custom_fonts/font = SubResource( 5 )
toggle_mode = true
group = SubResource( 6 )
text = "RUN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1804.0
margin_top = 160.0
margin_right = 1894.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( -192, -64 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
group = SubResource( 6 )
text = "SHOOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crouch" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1610.0
margin_top = 208.0
margin_right = 1714.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -192, -64 )
hint_tooltip = "Enable crouching. Allows you to hide behind low walls.  Shooting is more accurate.   Walking is slower but silent.  "
custom_fonts/font = SubResource( 5 )
toggle_mode = true
text = "CROUCH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guard" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1714.0
margin_top = 208.0
margin_right = 1804.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -192, -64 )
hint_tooltip = "Uses full turn.
Player does not shoot immediately, but only if an enemy enters their field of view until their next turn."
custom_fonts/font = SubResource( 5 )
toggle_mode = true
text = "GUARD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot2" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1804.0
margin_top = 208.0
margin_right = 1894.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -192, -64 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
text = "DANCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextEnemy" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1696.0
margin_top = 352.0
margin_right = 1830.0
margin_bottom = 392.0
rect_pivot_offset = Vector2( -192, -64 )
custom_fonts/font = SubResource( 5 )
text = "Next Enemy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousEnemy" type="Button" parent="HUD"]
light_mask = 0
margin_left = 1568.0
margin_top = 352.0
margin_right = 1702.0
margin_bottom = 392.0
rect_pivot_offset = Vector2( -192, -64 )
custom_fonts/font = SubResource( 5 )
text = "Prev Enemy"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/SkipTurnButton" to="." method="skip_turn_pressed"]
[connection signal="pressed" from="HUD/Idle" to="." method="idle_pressed"]
[connection signal="pressed" from="HUD/Walk" to="." method="walk_pressed"]
[connection signal="pressed" from="HUD/Run" to="." method="run_pressed"]
[connection signal="pressed" from="HUD/Shoot" to="." method="shoot_pressed"]
[connection signal="toggled" from="HUD/Crouch" to="HUD" method="crouch_pressed"]
[connection signal="toggled" from="HUD/Crouch" to="." method="crouch_pressed"]
[connection signal="pressed" from="HUD/NextEnemy" to="." method="next_enemy"]
[connection signal="pressed" from="HUD/PreviousEnemy" to="." method="prev_enemy"]
